feat:java 21
Signed-off-by: MutwakilX <144057106+Wadamzmail@users.noreply.github.com>