@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2005, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2005, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -53,9 +53,6 @@ import jdkx.tools.Diagnostic;
  * general {@link jdkx.annotation.processing.Processor Processor}
  * contract for that method is obeyed.
  *
- * @author Joseph D. Darcy
- * @author Scott Seligman
- * @author Peter von der Ah&eacute;
  * @since 1.6
  */
 public abstract class AbstractProcessor implements Processor {
@@ -79,10 +76,11 @@ public abstract class AbstractProcessor implements Processor {
      * @return the options recognized by this processor, or an empty
      * set if none
      */
+    @Override
     public Set<String> getSupportedOptions() {
         SupportedOptions so = this.getClass().getAnnotation(SupportedOptions.class);
         return (so == null) ?
-            Collections.emptySet() :
+            Set.of() :
             arrayToSet(so.value(), false, "option value", "@SupportedOptions");
     }
 
@@ -101,6 +99,7 @@ public abstract class AbstractProcessor implements Processor {
      * @return the names of the annotation interfaces supported by
      * this processor, or an empty set if none
      */
+    @Override
     public Set<String> getSupportedAnnotationTypes() {
             SupportedAnnotationTypes sat = this.getClass().getAnnotation(SupportedAnnotationTypes.class);
             boolean initialized = isInitialized();
@@ -110,13 +109,13 @@ public abstract class AbstractProcessor implements Processor {
                                                              "No SupportedAnnotationTypes annotation " +
                                                              "found on " + this.getClass().getName() +
                                                              ", returning an empty set.");
-                return Collections.emptySet();
+                return Set.of();
             } else {
                 boolean stripModulePrefixes =
                         initialized &&
                         processingEnv.getSourceVersion().compareTo(SourceVersion.RELEASE_8) <= 0;
                 return arrayToSet(sat.value(), stripModulePrefixes,
-                                  "annotation type", "@SupportedAnnotationTypes");
+                                  "annotation interface", "@SupportedAnnotationTypes");
             }
         }
 
@@ -128,6 +127,7 @@ public abstract class AbstractProcessor implements Processor {
      *
      * @return the latest source version supported by this processor
      */
+    @Override
     public SourceVersion getSupportedSourceVersion() {
         SupportedSourceVersion ssv = this.getClass().getAnnotation(SupportedSourceVersion.class);
         SourceVersion sv = null;
@@ -167,6 +167,7 @@ public abstract class AbstractProcessor implements Processor {
     /**
      * {@inheritDoc}
      */
+    @Override
     public abstract boolean process(Set<? extends TypeElement> annotations,
                                     RoundEnvironment roundEnv);
 
@@ -178,11 +179,12 @@ public abstract class AbstractProcessor implements Processor {
      * @param member {@inheritDoc}
      * @param userText {@inheritDoc}
      */
+    @Override
     public Iterable<? extends Completion> getCompletions(Element element,
                                                          AnnotationMirror annotation,
                                                          ExecutableElement member,
                                                          String userText) {
-        return Collections.emptyList();
+        return List.of();
     }
 
     /**
